Do not leave reference selection mode after selecting a cell (range).
Fix the position of the function auto-completion popup.
Fix default cell height: Let cell with two-lined text obscure only two rows.
Fix the function auto-completion: Close the hint label properly and do not crash, if there's no help text.
Properly remove cell obscuring.

Developer-Visible Only
----------------------
Improved the function module loading/unloading. (@PACKAGERS: plugin interface changed!)
Implement models for Map/Sheet/Region.
Splitted Editors.{cpp,h}.
Splitted Functions.{cpp,h}.




Changes for KSpread 1.5 Beta 1
==============================

Features
--------
Non-contiguous selection
Rewritten dependency handling
Embedded picture/image inside workbook
Improved and faster formula calculation
Manual line break (wish #9881)
Syntax highlight and function autocomplete for formula editing
Custom sheet selection and ordering in print dialog

Enhancements
------------
QWhatsThis help is available to various dialogs
Updated dialog screenshot in the handbook
Default autofill increment is set to 1 if only one cell is selected
Sum button automatically selects a suitable cell range
Percent operator in formula (wish #101217)
Improved zoomed printouts (bug #115879)
Use standard KDE font dialog in cell format dialog (bug #116991)
Faster redraw of merged cells (bug #118248)

Bug Fixes
---------
#120234: Freeze on circular reference
#120232: Strange behaviour on creating new file
#120204: Cell comment isn't wrapped
#119675: Background brush color is not correctly loaded
#119097: Right arrow for entry and validation
#118769: Better wording cursor movement setting
#117435: Incorrect result from COUNTIF function
#117252: Fix date (and time) increment for autofill
#116903: Indentation setting is not correctly handled in preferences
#116901: Unclear unit setting in preferences
#116702: Fix freeze with certain spreadsheet content
#116546: Endless dependency calculation
#116444: Fix cell protection