@@ -43,6 +43,7 @@ Fix the position of the function auto-completion popup.
 Fix default cell height: Let cell with two-lined text obscure only two rows.
 Fix the function auto-completion: Close the hint label properly and do not crash, if there's no help text.
 Properly remove cell obscuring.
+Properly repaint the cells and the column/row header(s) after column/row adjustment.
 
 Developer-Visible Only
 ----------------------
